Added pics to FreshPasta, added BG and Ingredients list

--- a/recipes/fresh-pasta.html
+++ b/recipes/fresh-pasta.html
@@ -6,6 +6,34 @@
     </head>
     
     <body>
+        <img src="../images/pasta1.JPG" width="249" height="441" alt="Pasta coated in flour">
         <h1>Fresh Pasta</h1>
+        <p> This is a recipe that has intimiated me for the longest time. The 
+            thought of making fresh pasta always seemed like an impossible
+            task, until I finally attempted to try. The picture above is my
+            second attempt and boy do I have some tips for you.  
+        </p>
+        <p> My first time making pasta, I forgot the Olive Oil! I might as 
+            well have trashed that dough. The dough came out super dry and I had 
+            to roll the dough out by hand using a plastic cup. The noodles that dough 
+            produced were extremely thick and after cooking them for about 5 minutes 
+            or so they were still raw in the middle. 
+        </p>
+        <p> Round two went by a lot smoother! I remembered the Olive Oil, the 
+            consistency was right and I had a rolling pin. The noodles cooked all
+            the way through, but some were thicker than others. And the rolling pin 
+            worked for the most part but the dough kept folding over itself and 
+            created this crease that weakened the structure of the noodle. I'm not sure 
+            how to correct the fold over issue, adding more flour so the dough doesn't 
+            stick to the rolling pin seemed to help. Also, go slow with the rolling pin. 
+        </p>
+        <img src="../images/pasta2.JPG" width="249" height="441" alt="Pasta Close Up">
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 cups all-purpose flour - spooned & leveled</li>
+            <li>3 large eggs</li>
+            <li>1/2 teaspoon kosher salt</li>
+            <li>1/2 tablespoon extra-virgin olive oil</li>
+        </ul>
     </body>
 </html>
