finished fresh pasta recipe

--- a/recipes/fresh-pasta.html
+++ b/recipes/fresh-pasta.html
@@ -28,12 +28,65 @@
             stick to the rolling pin seemed to help. Also, go slow with the rolling pin. 
         </p>
         <img src="../images/pasta2.JPG" width="249" height="441" alt="Pasta Close Up">
-        <h2>Ingredients</h2>
+        <h2>Ingredients:</h2>
         <ul>
             <li>2 cups all-purpose flour - spooned & leveled</li>
             <li>3 large eggs</li>
             <li>1/2 teaspoon kosher salt</li>
             <li>1/2 tablespoon extra-virgin olive oil</li>
         </ul>
+        <h2> Equipment: </h2>
+        <ul>
+            <dl>
+                <li><dt>Rolling Pin</dt></li>
+                <dd> Using a pasta machine or stand mixer with the pasta
+                    attachments is recommended, unless you want a work out.</dd>
+                <li> Lidded bowl or plastic wrap</li>
+                <li> Large Pot</li>
+                <li>Large baking sheet</li>
+                <li> Colander</li>
+                <li>Knife</li>
+                <li>Fork</li>
+            </dl>
+        </ul>
+        <h2>Steps:</h2>
+        <ol>
+            <li>Dump the flour onto a clean counter and create a liitle 
+            bowl right in the center of the pile using the fork.</li>
+            <li> Once your bowl is created add the eggs, olive oil and salt, then use the fork to 
+            gently beat the eggs.</li>
+            <li> Keeping the flour walls intact as best as you can, slowly start to 
+            incorporate the flour into the eggs. </li>
+            <li>Once half the flour has been incorporated the eggs should be thick enough
+            for you to start using your hands. This will be messy. Continue to incorporate
+            the flour until the mixture comes together to form a shaggy dough ball.</li>
+            <li>Knead your dough ball for 8-10 minutes, it might feel dry at first but it 
+            should become cohesive and smooth. If it feels to dry, dip your hand in some water 
+            and continue to knead. If the dough is to moist and sticky, sprinkle a little
+            flour onto the dough ball and continue to knead. Once desired consistency is 
+            achieved, wrap dough ball in plastic wrap and let rest at room temp for 30 mins.</li>
+            <li>Grab the baking sheet and dust with flour.</li>
+            <li> Once dough is rested, cut into 4 pieces.</li>
+            <li>Gently flatten out one piece of dough with your hand and slowly start 
+            to roll the dough out with the rolling pin. If you are using a pasta machine, 
+            run the dough through setting 1 three times. If you are using a rolling pin, roll 
+            the dough out to a foot long sheet. When rolling, it is best to dust your work surface 
+            and equipment with flour so the dough doesn't stick. But you do not want to over flour
+            as this will cause the dough to not stick to itself and when you fold the dough
+            it won't come together.</li>
+            <li>Fold the sheet in on itself in thirds and then rotate so you have a 
+            rectangle to work with.</li>
+            <li>Roll with pin until sheet is translucent. If using a machine, pass the 
+            sheet three times on setting 2 and 3, then once each on 4, 5 and 6. </li>
+            <li>Sprinkle whole sheet with flour and fold in half, flour again, then fold
+            in half. And lastly, flour the sheet again and fold it in half resulting in a small 
+            rectangle of dough. Place on baking sheet.</li>
+            <li>Repeat steps 8-11 for remaining dough pieces.</li>
+            <li>After all sheets have been rolled out, grab your knife and gently cut 
+            the rolled sheets of dough into your desired pasta width. You can also use any
+            pasta cutter attachment. Once pasta has been cut, dust with flour and fold into 
+            little nests ready for cooking or storing.</li>
+            <li> Cook in boiling water for 2-3 minutes.</li>
+        </ol>
     </body>
 </html>
