added and completed red sauce recipe

--- a/recipes/red-sauce.html
+++ b/recipes/red-sauce.html
@@ -6,5 +6,87 @@
     </head>    
     <body>
         <h1>Red Sauce</h1>
+        <p> The red sauce is a perfect pairing with the fresh pasta from the previous 
+            recipe. You can really make a red sauce as simple or as complex as you 
+            like. I'll be giving out my middle of the road recipe, but the recipe is 
+            extremely flexible and forgiving. Meaning, it is difficult to mess up and 
+            will be enjoyable 99.9% of the time.
+        </p>
+        <p>One day, I would love to have my own vegetable and herb garden full of 
+            wonderful smells and freshness. After rooting around for pesky weeds all day,
+            my wife and son ask me what is for dinner. I look into our basket of veggies that
+            we just harvested I see these vibrant, plump red tomatoes still cligning to the vine
+            and then I remember the fresh pasta I froze two nights before. I tell them a fresh 
+            red sauce is coming. Then my son and I spend the next hour prepping other fresh 
+            produce from our garden, such as onions, garlic, mushrooms, parsley and basil. We chop,
+            boil, simmer and reduce our way to dinner and our reward is a deliciously rich 
+            sauce that is complex in flavor but simple in prepartation. 
+        </p>
+        <p>My sauce will contain meat but meat is not essential. There will be mushrooms
+            as well, please exclude or include any ingredient you would like. Also,
+            I am not going to give measurements for a lot of the spices and herbs mixed. 
+            This is for two reasons:
+            <ol>
+                <li>I don't measure. Cooking is all about feel and smell. If it looks like
+                    enough, it probably is enough. (Another golden rule is that you can always 
+                    add more, but you can never take any back)
+                </li>
+                <li>It's season to taste when it comes to herbs, spices, salt and pepper
+                    especially in a sauce like this. So add with caustion, but dont be afraid
+                    to accomodate your taste buds. I recommend adding maybe a 1/2 teaspoon of each,
+                    stirring and then working up from there. Go easy with the pepper and salt, though.
+                    We'll be adding red chili flakes as wel if that is your jam.  
+                </li>
+            </ol>
+        </p>
+        <h2>Ingredients:</h2>
+        <ul>
+            <li>1 28oz can of crushed tomatoes</li>
+            <li>1 28oz can of whole tomatoes</li>
+            <li>1 6oz can of tomato puree</li>
+            <li>1 lb of italian sausage</li>
+            <li>2 cups of beef broth</li>
+            <li>1 lb of sliced baby bella mushrooms</li>
+            <li>1 yellow onion: half minced, half diced</li>
+            <li>4 cloves of garlic, minced</li>
+            <li>1/4 cup of butter</li>
+            <li>Crushed red pepper</li>
+            <li>Fresh basil</li>
+            <li>Fresh parsley</li>
+            <li>Dried oregano</li>
+            <li>Dried thyme</li>
+            <li>Salt</li>
+            <li>Black pepper</li>
+            <li>Olive oil</li>
+        </ul>
+        <h2>Equipment:</h2>
+        <ul>
+            <li>Large stock pot</li>
+            <li>Wooden Spoon</li>
+            <li>Cutting Board</li>
+            <li>Knife</li>
+        </ul>
+        <h2>Steps:</h2>
+        <ol>
+            <li>Start by chopping the basil, onion and garlic cloves. Take half of the 
+                sliced mushrooms and mince them.</li>
+            <li>In two tablespoons of olive oil, start sweating the minced onion and 
+                garlic over medium heat.</li>
+            <li>Once the onions become translucent, add the 
+                italian sausage, minced mushrooms and remaining onion.
+            </li> 
+            <li>After the italian sausage has browned completely, add the tomato paste 
+                and cook for 3-5 minutes till the paste coats the meat. The vegetables added
+                should have become a paste.
+            </li>
+            <li>Next, add the remaining whole and crushed tomatoes as well as the beef broth,
+                oregano, parsley and thyme.</li>
+            <li>Bring the sauce to a boil. Stiring, occasionally.</li>
+            <li>Reduce heat to low. Add remaining mushrooms, basil, red pepper, salt
+                and black pepper. Stir in ingredients.
+            </li>
+            <li>Cover and simmer for 1 hour.</li>
+            <li>Stir in butter. Serve over fresh pasta.</li>
+        </ol>
     </body>
 </html>
