Completed pan seared salmon recipe

--- a/recipes/pan-fried-salmon.html
+++ b/recipes/pan-fried-salmon.html
@@ -6,5 +6,41 @@
     </head>
     <body>
         <h1>Pan Seared Salmon</h1>
+        <p>It doesn't get any more simple than pan searing. While, it is an easy cooking 
+            technique to over think, low and slow is the best way to learn. This is another 
+            dish to experiment with. Throw different seasonings on the salmon. Try a spicy cajun 
+            rub, a rich blend of steak seasoning or something a bit sweeter like a honey glaze.</p>
+        <p>But for this recipe I am keeping it basic and rolling with just salt and pepper
+            leaving you room for creativity. I love this dish because it is easy to keep 
+            healthy, it is really dependent on how you season your salmon filet. You can always
+            throw your salmon in the oven or under the broiler for a healthier fish, 
+            but that crunchy skin will be absent and to me that is the best part. 
+        </p>
+        <h2>Ingredients:</h2>
+        <ul>
+            <li>Salmon filet</li>
+            <li>Olive oil</li>
+            <li>Salt</li>
+            <li>Pepper</li>
+        </ul>
+        <h2>Equipment:</h2>
+        <ul>
+            <li>Cast Iron skillet or non-stick skillet</li>
+            <li>Spatula</li>
+        </ul>
+        <h2>Steps:</h2>
+        <ol>
+            <li>Heat one tablespoon of oil in a skillet over medium heat.</li>
+            <li>Season flesh side of salmon, leaving skin side bare.</li>
+            <li>Place salmon skin side down into skillet.</li>
+            <li>Let the salmon cook for 7-10 minutes depending on thickness.</li>
+            <li>Flip the salmon onto the flesh side and leave it for 2-3 minutes.
+                Sprinkle a little salt onto the skin side.
+            </li>
+            <li>Flip salmon back onto skin side, turn off heat and let the salmon rest 
+                for 3-5 minutes.
+            </li>
+            <li>Enjoy with your favorite side dish</li>
+        </ol>
     </body>
 </html>
