Deleted peach cobbler recipe. updated README.md

--- a/recipes/red-sauce.html
+++ b/recipes/red-sauce.html
@@ -47,7 +47,7 @@
             <li>1 lb of italian sausage</li>
             <li>2 cups of beef broth</li>
             <li>1 lb of sliced baby bella mushrooms</li>
-            <li>1 yellow onion: half minced, half diced</li>
+            <li>1 large yellow onion: half minced, half diced</li>
             <li>4 cloves of garlic, minced</li>
             <li>1/4 cup of butter</li>
             <li>Crushed red pepper</li>
