Added css to all sites.

--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
     <meta charset="UTF-8">
     <head>
         <title> Odin Recipes </title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <a href="https://www.shroomery.org/" target="_blank">
-        <img src="images/mushroom-iron.jpeg" width="550" height="420" alt="Mushroom Skillet">
+        <img src="images/mushroom-iron.jpeg" width="550" height="420"  alt="Mushroom Skillet">
         </a>
-        <h1>Odin Recipes</h1>
+        <h1 class="main">Odin Recipes</h1>
         <ul>
-        <li><a href="recipes/fresh-pasta.html">Fresh Pasta</a></li>
-        <li><a href="recipes/red-sauce.html">Red Sauce</a></li>
-        <li><a href="recipes/pan-fried-salmon.html">Pan Seared Salmon</a></li>
+        <li><button><a href="recipes/fresh-pasta.html" class="link">Fresh Pasta</a></button></li>
+        <li><button><a href="recipes/red-sauce.html" class="link">Red Sauce</a></button></li>
+        <li><button><a href="recipes/pan-fried-salmon.html" class="link">Pan Seared Salmon</a></button></li>
+        </ul>
     </body>
 </html>
