--- a/recipes/fresh-pasta.html
+++ b/recipes/fresh-pasta.html
@@ -3,11 +3,12 @@
     <meta charset="UTF-8">
     <head>
         <title> Fresh Pasta </title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     
     <body>
-        <img src="../images/pasta1.JPG" width="249" height="441" alt="Pasta coated in flour">
-        <h1>Fresh Pasta</h1>
+        <img src="../images/pasta1.JPG" width="auto" height="700" alt="Pasta coated in flour">
+        <h1 class="main">Fresh Pasta</h1>
         <p> This is a recipe that has intimiated me for the longest time. The 
             thought of making fresh pasta always seemed like an impossible
             task, until I finally attempted to try. The picture above is my
@@ -27,15 +28,15 @@
             how to correct the fold over issue, adding more flour so the dough doesn't 
             stick to the rolling pin seemed to help. Also, go slow with the rolling pin. 
         </p>
-        <img src="../images/pasta2.JPG" width="249" height="441" alt="Pasta Close Up">
-        <h2>Ingredients:</h2>
+        <img src="../images/pasta2.JPG" width="auto" height="700" alt="Pasta Close Up">
+        <h2 class="little">Ingredients:</h2>
         <ul>
             <li>2 cups all-purpose flour - spooned & leveled</li>
             <li>3 large eggs</li>
             <li>1/2 teaspoon kosher salt</li>
             <li>1/2 tablespoon extra-virgin olive oil</li>
         </ul>
-        <h2> Equipment: </h2>
+        <h2 class="little"> Equipment: </h2>
         <ul>
             <dl>
                 <li><dt>Rolling Pin</dt></li>
@@ -49,7 +50,7 @@
                 <li>Fork</li>
             </dl>
         </ul>
-        <h2>Steps:</h2>
+        <h2 class="little">Steps:</h2>
         <ol>
             <li>Dump the flour onto a clean counter and create a liitle 
             bowl right in the center of the pile using the fork.</li>
@@ -88,5 +89,6 @@
             little nests ready for cooking or storing.</li>
             <li> Cook in boiling water for 2-3 minutes.</li>
         </ol>
+        <button><a class="link" href="../index.html">Home</a></button>
     </body>
 </html>
