--- a/recipes/red-sauce.html
+++ b/recipes/red-sauce.html
@@ -3,9 +3,10 @@
     <meta charset="UTF-8">
     <head>
         <title>Red Sauce</title>
+        <link rel="stylesheet" href="styles.css">
     </head>    
     <body>
-        <h1>Red Sauce</h1>
+        <h1 class="main">Red Sauce</h1>
         <p> The red sauce is a perfect pairing with the fresh pasta from the previous 
             recipe. You can really make a red sauce as simple or as complex as you 
             like. I'll be giving out my middle of the road recipe, but the recipe is 
@@ -39,7 +40,7 @@
                 </li>
             </ol>
         </p>
-        <h2>Ingredients:</h2>
+        <h2 class="little">Ingredients:</h2>
         <ul>
             <li>1 28oz can of crushed tomatoes</li>
             <li>1 28oz can of whole tomatoes</li>
@@ -59,14 +60,14 @@
             <li>Black pepper</li>
             <li>Olive oil</li>
         </ul>
-        <h2>Equipment:</h2>
+        <h2 class="little">Equipment:</h2>
         <ul>
             <li>Large stock pot</li>
             <li>Wooden Spoon</li>
             <li>Cutting Board</li>
             <li>Knife</li>
         </ul>
-        <h2>Steps:</h2>
+        <h2 class="little">Steps:</h2>
         <ol>
             <li>Start by chopping the basil, onion and garlic cloves. Take half of the 
                 sliced mushrooms and mince them.</li>
@@ -88,5 +89,6 @@
             <li>Cover and simmer for 1 hour.</li>
             <li>Stir in butter. Serve over fresh pasta.</li>
         </ol>
+        <button><a class="link" href="../index.html">Home</a></button>
     </body>
 </html>
