--- a/recipes/pan-fried-salmon.html
+++ b/recipes/pan-fried-salmon.html
@@ -3,9 +3,10 @@
     <meta charset="UTF-8">
     <head>
         <title>Pan Seared Salmon</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Pan Seared Salmon</h1>
+        <h1 class="main">Pan Seared Salmon</h1>
         <p>It doesn't get any more simple than pan searing. While, it is an easy cooking 
             technique to over think, low and slow is the best way to learn. This is another 
             dish to experiment with. Throw different seasonings on the salmon. Try a spicy cajun 
@@ -16,19 +17,19 @@
             throw your salmon in the oven or under the broiler for a healthier fish, 
             but that crunchy skin will be absent and to me that is the best part. 
         </p>
-        <h2>Ingredients:</h2>
+        <h2 class="little">Ingredients:</h2>
         <ul>
             <li>Salmon filet</li>
             <li>Olive oil</li>
             <li>Salt</li>
             <li>Pepper</li>
         </ul>
-        <h2>Equipment:</h2>
+        <h2 class="little">Equipment:</h2>
         <ul>
             <li>Cast Iron skillet or non-stick skillet</li>
             <li>Spatula</li>
         </ul>
-        <h2>Steps:</h2>
+        <h2 class="little">Steps:</h2>
         <ol>
             <li>Heat one tablespoon of oil in a skillet over medium heat.</li>
             <li>Season flesh side of salmon, leaving skin side bare.</li>
@@ -42,5 +43,6 @@
             </li>
             <li>Enjoy with your favorite side dish</li>
         </ol>
+        <button><a class="link" href="../index.html">Home</a></button>
     </body>
 </html>
